--- a/style.css
+++ b/style.css
@@ -16,9 +16,12 @@ nav {
   background-color: var(--smokeyblack);
   color: var(--wintersky);
 }
+#namebox {
+}
 /*main box*/
 #main {
   background-image: linear-gradient(180deg, var(--turquoise), var(--wintersky));
+  height: calc(100vh - 11.5vh);
 }
 h1 {
   text-align: center;
@@ -30,7 +33,13 @@ h1 {
 #userbox {
   border: #fbff12 solid 1pt;
   color: #ffffff;
+  transition: box-shadow 1s ease-in-out, color 0.3s ease-in-out;
+}
+#userbox:hover {
   box-shadow: var(--lemonglacier) 0px 0px 10px;
+}
+#userbox:hover h2 {
+  color: var(--lemonglacier);
 }
 #userbox h2 {
   margin-bottom: 1em;
@@ -44,9 +53,17 @@ h1 {
 .affirm:hover {
   box-shadow: var(--lemonglacier) 0px 0px 10px;
   border: var(--lemonglacier) 1pt solid;
+  color: #fbff12;
 }
 .new {
   background-color: var(--turquoise);
+  font-weight: bold;
+}
+.new:hover {
+  box-shadow: var(--wintersky) 0px 0px 10px;
+  color: var(--wintersky);
+  text-shadow: #ffffff 0px 0px 2px;
+  border: var(--wintersky) 1pt solid;
 }
 /*footer*/
 footer {
